--- a/FP1/css/style.css
+++ b/FP1/css/style.css
@@ -3,6 +3,7 @@
 body {
     font-family: inter !important;
     background-color: #C1DDFE;
+    padding-top: 2%;
 }
 
 #hamburgerMenu {
@@ -17,6 +18,10 @@ body {
 .indexbunny {
     display: block;
      margin-left: auto;
+}
+
+.bunny {
+  padding-left: 2%;
 }
 
 .column {
@@ -91,8 +96,9 @@ body {
 
 
 .playsongImage {
-    padding-bottom: 6%;
-    width: 30%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .attentionTitle {
@@ -110,13 +116,17 @@ body {
 }
 
 .groupPhotoTwo {
-    width: 40%;
-    padding-left: 50%;
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: 4%;
 }
 
 .groupPhotoFour {
     width: 60%;
-    padding-left: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: 4%;
 }
 
 #groupPhotoAbout {
@@ -127,7 +137,10 @@ body {
 .aboutCarouselTitle {
     font-size: 3em;
     color: #0C39D0;
+    text-align: center;
+    margin-top: 200px;
 }
+
 
 /* .carousel-item {
     width:20% !important;
@@ -313,7 +326,7 @@ hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
   .bar {
     height: 5px;
     width: 100%;
-    background-color: #000000;
+    background-color: #0C39D0;
     display: block;
     border-radius: 5px;
     transition: 0.3s ease;
@@ -347,7 +360,7 @@ hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
   }
   
   .hbrgr li a {
-    color: white;
+    color: #0C39D0;
     background-color: transparent !important;
     font-size: 20px;
     text-decoration: none;
@@ -362,7 +375,7 @@ hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
   }
   
   .change .bar {
-    background-color: white;
+    background-color: #0C39D0;
   }
   
   .change #bar1 {
@@ -375,4 +388,15 @@ hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
   
   .change #bar3 {
     transform: translateY(-6px) rotateZ(45deg);
+  }
+
+  .collapsible {
+    width: 36em;
+    box-shadow: none !important;
+    border: none !important;
+  }
+
+  .collapsible-header {
+    background-color: transparent !important;
+    border: none !important;
   }
