--- a/FP1/css/style.css
+++ b/FP1/css/style.css
@@ -3,25 +3,53 @@
 body {
     font-family: inter !important;
     background-color: #C1DDFE;
-    padding-top: 2%;
+    padding-top: 7%;
 }
 
 #hamburgerMenu {
     text-align: right;
 }
+
 .middle {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+#indexbunny {
+    z-index: -10;
+    height: 70%;
+    right: 0%;
+    top: 70%;
+}
+
 .indexbunny {
-    display: block;
-     margin-left: auto;
+  display: block;
+  margin-top: auto;
+  margin-bottom: 6%;
+  margin-right: 0%;
+  margin-left: auto;
+  padding-top: 30%;
+  width: 30%;
+}
+
+.indexbunnyAbout {
+  display: block;
+  margin-top: auto;
+  margin-bottom: 6%;
+  margin-right: 0%;
+  margin-left: auto;
+  padding-top: 10%;
+  width: 30%;
 }
 
 .bunny {
-  padding-left: 2%;
+  position: fixed;
+  left: 2%;
+}
+
+.indexTitle {
+  width: 40%;
 }
 
 .column {
@@ -58,7 +86,7 @@ body {
 
 .lyric {
     padding:0%;
-    font-size: 2.2em;
+    font-size: 1.5em;
     font-weight: bold;
     color: #0C39D0;
 }
@@ -135,20 +163,14 @@ body {
 }
 
 .aboutCarouselTitle {
-    font-size: 3em;
+    font-size: 1.5em;
     color: #0C39D0;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 5%;
 }
 
-
-/* .carousel-item {
-    width:20% !important;
-    height: 30% !important;
-  } */
-
   .carousel .carousel-item{
-    width: 550px !important;
+    width: 30% !important;
 }
 
 .glow:hover:after{
@@ -164,7 +186,7 @@ body {
 /* glow effect derived from https://codepen.io/PrakharThakur/pen/oogqyE */
 .glow::after{
   position: absolute;
-  height: 320%;
+  height: 93%;
   top: -2px;
   left:-2px;
   width: 100%;
@@ -172,14 +194,18 @@ body {
   transition: all linear 0.3s;
 }
 
+#indexCarousel {
+  margin-top: 5% !important;
+}
+
   .carousel {
     margin-top: 10% !important;
-    height: 50em !important;
+    height: fit-content !important;
   }
 
   .carouselCaption {
     text-align: center;
-    font-size: 4em;
+    font-size: 1.5em;
     color:#0C39D0;
   }
 
@@ -196,8 +222,14 @@ body {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-size: 4em;
+    font-size: 1.5em;
     color:#0C39D0;
+    margin-top: 60%;
+  }
+
+  .collapsible-body {
+    width: 100%;
+    height: 100%;
   }
 
 /*  grow hover effect derived from https://codepen.io/AdamCCFC/pen/WvzBKq  */
@@ -213,107 +245,295 @@ body {
 
 .star {
     position: absolute;
+    z-index: -1000;
 }
 
-#star1 {
-    height: 6%;
-    right: 4%;
-    top: 36%;
-}
+@media only screen and (min-width: 601px) {
 
-#star2 {
-    height: 7%;
-    right: 57%;
+  #star1 {
+      height: 6%;
+      right: 3;
+      top: 36%;
+  }
+
+  #star2 {
+      height: 7%;
+      right: 57%;
+      top: 26%;
+  }
+
+  #star3 {
+      height: 14%;
+      left: 30%;
+      top: 10%;
+  }
+
+  #star4 {
+      height: 6%;
+      right: 8%;
+      top: 43%;
+  }
+
+  #star5 {
+      height: 4%;
+      right: 8%;
+      top: 8%;
+  }
+
+  #star6 {
+      height: 7%;
+      right: 30%;
+      top: 40%;
+  }
+
+  #star7 {
+      height: 10%;
+      right: 37%;
+      top: 55%;
+  }
+
+  #star8 {
+      height: 8%;
+      left: 55%;
+      top: 10%;
+  }
+
+  #star9 {
+      height: 5%;
+      left: 3%;
+      top: 35%;
+  }
+
+  #star10 {
+      height: 5%;
+      right: 6%;
+      top: 26%;
+  }
+
+  #star16 {
+      height: 7%;
+      left: 3%;
+      top: 86%;
+  }
+
+  #star17 {
+      height: 8%;
+      right: 47%;
+      top: 39%;
+  }
+
+  #star18 {
+      height: 6%;
+      left: 45%;
+      top: 36%;
+  }
+
+  #star19 {
+      height: 10%;
+      left: 13%;
+      top: 10%;
+  }
+
+  #star20 {
+      height: 8%;
+      right: 6%;
+      top: 26%;
+  }
+
+  #star21 {
+    height: 5%;
+    right: 3%;
     top: 26%;
-}
+  }
 
-#star3 {
-    height: 14%;
-    left: 30%;
-    top: 10%;
-}
+  #star22 {
+    height: 10%;
+    right: 9%;
+    top: 40%;
+  }
 
-#star4 {
+  #star23 {
     height: 6%;
-    left: 8%;
-    top: 43%;
-}
+    right: 15%;
+    top: 15%;
+  }
 
-#star5 {
+  #star24 {
+    height: 8%;
+    left: 40%;
+    top: 30%;
+  }
+
+  #star25 {
+    height: 10%;
+    left: 25%;
+    top: 10%;
+  }
+
+  #star26 {
     height: 4%;
     right: 8%;
-    top: 8%;
+    top: 50%;
+  }
 }
 
-#star6 {
-    height: 7%;
-    right: 30%;
-    top: 40%;
-}
-
-#star7 {
-    height: 10%;
-    right: 37%;
-    top: 55%;
-}
-
-#star8 {
-    height: 8%;
-    left: 45%;
-    top: 10%;
-}
-
-#star9 {
-    height: 5%;
-    left: 3%;
-    top: 35%;
-}
-
-#star10 {
-    height: 5%;
-    right: 6%;
-    top: 26%;
-}
-
-#star16 {
-    height: 7%;
-    left: 3%;
-    top: 86%;
-}
-
-#star17 {
-    height: 8%;
-    right: 47%;
-    top: 43%;
-}
-
-#star18 {
+@media only screen and (max-width: 600px) {
+  
+  #star1 {
     height: 6%;
-    left: 45%;
-    top: 40%;
-}
+    left: 15%;
+    top: 220%;
+  }
 
-#star19 {
-    height: 10%;
-    left: 13%;
-    top: 10%;
-}
+  #star2 {
+      height: 7%;
+      left: 20%;
+      top: 170%;
+  }
 
-#star20 {
-    height: 8%;
-    right: 6%;
-    top: 26%;
+  #star3 {
+      height: 4%;
+      left: 30%;
+      top: 120%;
+  }
+
+  #star4 {
+      height: 6%;
+      left: 8%;
+      top: 98%;
+  }
+
+  #star5 {
+      height: 4%;
+      left: 8%;
+      top: 50%;
+  }
+
+    #star6 {
+      height: 7%;
+      right: 20%;
+      top: 130%;
+  }
+
+  #star7 {
+      height: 6%;
+      right: 7%;
+      top: 100%;
+  }
+
+  #star8 {
+      height: 3%;
+      right: 35%;
+      top: 65%;
+  }
+
+  #star9 {
+      height: 3%;
+      right: 2%;
+      top: 40%;
+  }
+
+  #star10 {
+      height: 5%;
+      right: 6%;
+      top: 26%;
+  }
+
+  #star16 {
+      height: 4%;
+      right: 10%;
+      top: 40%;
+  }
+
+  #star17 {
+      height: 3%;
+      right: 16%;
+      top: 70%;
+  }
+
+  #star18 {
+      height: 6%;
+      right: 5%;
+      top: 100%;
+  }
+
+  #star19 {
+      height: 5%;
+      right: 13%;
+      top: 160%;
+  }
+
+  #star20 {
+      height: 4%;
+      right: 17%;
+      top: 190%;
+  }
+
+  #star21 {
+    height: 2%;
+    left: 6%;
+    top: 25%;
+  }
+
+  #star22 {
+    height: 4%;
+    left: 10%;
+    top: 60%;
+  }
+
+  #star23 {
+    height: 5%;
+    left: 8%;
+    top: 90%;
+  }
+
+  #star24 {
+    height: 5%;
+    left: 4%;
+    top: 126%;
+  }
+
+  #star25 {
+    height: 4%;
+    left: 17%;
+    top: 140%;
+  }
+
+  #star26 {
+    height: 6%;
+    left: 20%;
+    top: 170%;
+  }
+  
 }
 
 /* 
 hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
 
+ul {
+  max-width: 100%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* .carousel:after {
+  content: " ";
+  display: block;
+  clear: both;
+} */
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
 
 #menu {
     z-index: 2;
-    position: absolute;
-    margin-left: 90%;
-    margin-right: 0;
+    position: fixed;
+    right: 5%;
   }
   
   #menu-bar {
@@ -362,7 +582,7 @@ hamburger menu derived from https://codepen.io/alvarotrigo/pen/oNGzoYd */
   .hbrgr li a {
     color: #0C39D0;
     background-color: transparent !important;
-    font-size: 20px;
+    font-size: 1em;
     text-decoration: none;
   }
   
