--- a/FP1/css/style.css
+++ b/FP1/css/style.css
@@ -252,7 +252,7 @@ body {
 
   #star1 {
       height: 6%;
-      right: 3;
+      right: 3%;
       top: 36%;
   }
 
@@ -519,15 +519,10 @@ img {
   max-height: 100%;
 }
 
-/* .carousel:after {
-  content: " ";
-  display: block;
-  clear: both;
-} */
-
 iframe {
   width: 100%;
   height: 100%;
+  border:0;
 }
 
 #menu {
